# python-and-c

./: CMakeLists.txt  ReadMe.md
src/: CMakeLists.txt  c_type_struct.cpp  c_type_struct_test.py  c_type_union.cpp  c_type_union_test.py  run_simple_string.cpp
